2002-02-18  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* demo/fillbox.dem: New demo for filled boxes plotting style.

	* src/win/wgraph.c (drawgraph): Handle case where one GWOPBLK is
	exactly full, but a next one hasn't been allocated.

2002-02-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* demo/all.dem: Added fillcrvs.dem demo.

	* demo/fillcrvs.dem: New demo for filled curves.

	* demo/poldat.dem: Reduced file size.

	* demo/mgr.dem: Typo fixed; replaced pause text "<CR>" by "(-> return)"
	as in other demos.

2002-02-17  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d/README: Updated.

	* pm3d/old-docs/README: Completely new contents. This file contains 
	technical documentation on gnuplot internals which I was coding (pm3d,
	mouse, hotkeys and communication). It should be renamed (name to be
	decided) and moved to the src directory.

	* pm3d/old-docs/*: Files removed except for README, see above.
	
	* ANNOUNCE-MOUSE: Removed.

2002-02-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.h src/plot3d.c src/datafile.c src/pm3d.c: New fix of
	cb-axis autoscale for binary datafiles. Now pm3d splots should work
	with all combinations of linear and logarithmic z and cb axes.

2002-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/plot3d.c: Let the default legend title for  splot 'a.dat' binary
	is just  'a.dat'  instead of the current  'a.dat' binary  while for
	'a.dat' binary using 2:1:3  all 4 words as now.

2002-02-15  Alexander Mai <st002279@hrzpub.tu-darmstadt.de>

	* src/command.c src/plot.c src/os2/dialogs.c src/os2/gclient.c
	src/os2/gnupmdrv.c src/os2/gnupmdrv.h: Clean up procedure to find 
	help files on OS/2. Convert //-style comments to /**/

2002-02-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/graphics.c src/mouse.c src/plot3d.c src/save.c src/show.c:
	Let them compile without PM3D #defined.

2002-02-15  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* docs/Makefile.in: Add missing .trm files to CORETERM. Always build